fixed h1 size issue on mobile

--- a/main.css
+++ b/main.css
@@ -155,4 +155,8 @@ p{
     #backgroundVideo {
         display: none;
     }
+
+    .header h1 {
+      font-size: 50px;
+    }
 }
